--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ DATABASE_PATH=prisma/dev.db
 # DB_NAME=finflow_db
 # DB_USER=root
 # DB_PASSWORD=123456
+
+GEMINI_API_KEY=AIzaSyAUhhIAoZXGDg1HhG1sZmUrutHfapOdKUU
