Update GEMINI_API_KEY placeholder in .env file

--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ DATABASE_PATH=prisma/dev.db
 # DB_USER=root
 # DB_PASSWORD=123456
 
-GEMINI_API_KEY=AIzaSyAUhhIAoZXGDg1HhG1sZmUrutHfapOdKUU
+GEMINI_API_KEY="Thêm Gemini API Key của bạn vào đây"
